RESOLVED FIXED29663
Tighten up the ScheduledRedirection machinery to prepare for a bug fix
https://bugs.webkit.org/show_bug.cgi?id=29663
Summary Tighten up the ScheduledRedirection machinery to prepare for a bug fix
Darin Adler
Reported 2009-09-22 17:30:16 PDT
I have a bug fix coming that requires some improvements to the ScheduledRedirection machinery in FrameLoader.
Attachments
patch (10.27 KB, patch)
2009-09-22 17:35 PDT, Darin Adler
sam: review+
Darin Adler
Comment 1 2009-09-22 17:35:47 PDT
Darin Adler
Comment 2 2009-09-22 17:38:27 PDT
Note You need to log in before you can comment on or make changes to this bug.