third_party/WebKit/WebCore/loader/FrameLoader.h
@@ -36,6 +36,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ResourceRequest.h"
 #include "ThreadableLoader.h"
 #include "Timer.h"
+#include <wtf/Forward.h>
 
 namespace WebCore {
 
@@ -486,7 +487,7 @@ namespace WebCore {
         bool shouldReloadToHandleUnreachableURL(DocumentLoader*);
         void handleUnimplementablePolicy(const ResourceError&);
 
-        void scheduleRedirection(ScheduledRedirection*);
+        void scheduleRedirection(PassOwnPtr<ScheduledRedirection>);
         void startRedirectionTimer();
         void stopRedirectionTimer();
 
@@ -545,6 +546,8 @@ namespace WebCore {
         bool shouldTreatURLAsSameAsCurrent(const KURL&) const;
 
         void saveScrollPositionAndViewStateToItem(HistoryItem*);
+
+        bool allChildrenAreComplete() const; // immediate children, not all descendants
 
         Frame* m_frame;
         FrameLoaderClient* m_client;
